--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="image1">
             <img src="images/living.jpg" alt="living" class="living">
         </div>
-            <div id="txt">
+            <div class="txt">
                 <h1>Innovative designs,</h1>
                 <h1>Timeless Appeal</h1>
                 <br>
